# fastplayer

./: .gitignore  CMakeLists.txt  Makefile  README.md  listmodel.cpp  listmodel.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h  playliststyle.cpp  playliststyle.h  qthelper.hpp  resources.qrc
resources/: fastplayer-new.desktop  fastplayer.desktop
